- Updated and tidied the page post merging changes from @sjmaple - Added some resources to the JShell / REPL page