@@ -101,12 +101,252 @@ As mentioned earlier, Java 9 provides a JShell API that we can access from withi
 ```
 
 The above block is not for the REPL.
+    
+Some more Java 9 improvements to try in JShell (thanks to @sjmaple for the contribution)
 
-We can make `http` calls via the REPL, lets have a look at how that works. We can use Java 9's new API to create `Http` calls. Check the `JavaDoc` for `HttpRequest`.
+    jshell> import java.time.*;
+    jshell> void printf(Object a) { 
+        System.out.println(a); 
+    }
 
-Make 50 `http` `GET` calls to http://www.google.com via the REPL.
+    |  created method printf(Object)
+    
+Collections of factory methods: 
+
+1-10 arguments + varargs: 
+
+    jshell> List.of(1, 2, 3, 4, 5)
+    $3 ==> [1, 2, 3, 4, 5]
+    
+    jshell> Map.of("hello", "world", "status", "mad")
+    $4 ==> {hello=world, status=mad}
+    
+    jshell> Set.of(1,2,4)
+    $5 ==> [2, 4, 1]
+
+    jshell> Set.of(1,2,4)      <=== no change in order of the elements
+    $6 ==> [2, 4, 1]
+    
+Implementation classes 2 elements vs N elements:
+    
+    jshell> List.of(1).getClass()
+    $9 ==> class java.util.ImmutableCollections$List1
+
+    jshell> List.of(1, 2).getClass()
+    $10 ==> class java.util.ImmutableCollections$List2
+
+Streams: 
+   * dropwhile/takewhile:
+   
+    jshell> IntStream.range(1, 10).dropWhile(x -> x < 5).forEach(System.out::println)
+    
+    5
+    6
+    7
+    8
+    9
+
+   * iterate 
+
+    jshell> IntStream.iterate(0, x -> x + 1).filter(x -> x < 10).forEach(System.out::println)
+
+    0
+    1
+    2
+    3
+    4
+    5
+    6
+    7
+    8
+    9
+
+   Press Ctrl-C to get back to the `jshell` prompt
+     
+   * Stream from Optional: 
+    
+    jshell> Optional.of(1).stream().map(x -> x*3);
+    $16 ==> java.util.stream.ReferencePipeline$3@4e7dc304
+     
+    jshell> Optional.empty().or(() -> Optional.of("Hello"))
+    $17 ==> Optional[Hello]
+    
+    jshell> Optional.empty().ifPresent(null) 
+    
+    jshell> Optional.empty().ifPresentOrElse(null, () -> printf("hello"));
+    hello
+ 
+   * Date and time improvements:
+     
+    jshell> import java.time.*;
+    
+    jshell> LocalDate.now()
+    $21 ==> 2017-08-15
+
+    jshell> $21.datesUntil(LocalDate.of(2017, 8, 20)).forEach(System.out::println)
+    2017-08-15
+    2017-08-16
+    2017-08-17
+    2017-08-18
+    2017-08-19
+    
+Concurrency
+   * Completable futures:
+     
+    jshell> CompletableFuture<String> future = new CompletableFuture<>()
+    future ==> java.util.concurrent.CompletableFuture@77846d2c[Not completed]
+
+    jshell> future.copy()
+    $28 ==> java.util.concurrent.CompletableFuture@16f7c8c1[Not completed]
+    
+    jshell> $28.complete("Hello world")
+    $29 ==> true
+    
+    jshell> $29.get()
+    |  Error:
+    |  boolean cannot be dereferenced
+    |  $29.get()
+    |  ^-----^
+
+    jshell> future.isDone()
+    $30 ==> false
+    
+   * delays / timeouts:
+    
+    * completeOnTimeout(T value, long timeout, TimeUnit unit)
+   
+        jshell> future.completeOnTimeout("Isn't this amazing", 1, TimeUnit.SECONDS)
+        $31 ==> java.util.concurrent.CompletableFuture@281e3708[Not completed, 2 dependents]
+     
+    * orTimeout(1, TimeUnit.SECONDS)
+     
+        jshell> future.orTimeout(1, TimeUnit.SECONDS)
+        $32 ==> java.util.concurrent.CompletableFuture@281e3708[Completed normally]
+     
+HttpClient
+
+   Run jshell with a CLI argument to load a JDK module (`jdk.incubator.httpclient`)
+   
+    $ jshell --add-modules jdk.incubator.httpclient
+    
+    jshell> import jdk.incubator.http.*;
+    jshell> String body = HttpClient.newHttpClient().send(HttpRequest.newBuilder(URI.create("https://www.google.com")).GET().build(), HttpResponse.BodyHandler.asString()).body();
+
+Try using http in the URL address? What is the expected result? 
+
+    jshell> String body = HttpClient.newHttpClient().send(HttpRequest.newBuilder(URI.create("http://www.google.com")).GET().build(), HttpResponse.BodyHandler.asString()).body();
+    body ==> "<HTML><HEAD><meta http-equiv=\"content-type\" co ... A>.\r\n</BODY></HTML>\r\n"
+    
+Try without https in the URL address? What is the expected result? 
+    
+    java.lang.NullPointerException
+
+Now that we can make `http` calls via the REPL, lets have a look at how that works. We can use Java 9's new API to create `Http` calls. Check the `JavaDoc` for `HttpRequest` or use the example above.
+Make 50 `http` `GET` calls to http://www.google.com via the REPL. 
+
+Process management API: 
+    
+   Reload jshell using the usual CLI invocation:
+   
+    $ jshell
+    
+    jshell> ProcessHandle currentProcess = ProcessHandle.current();
+    currentProcess ==> 10420
+
+    jshell> System.out.println("Current Process Id: = " + currentProcess.pid());
+    Current Process Id: = 10420
+           
+   * ProcessHandle.Info info()
+       * Optional<String[]> arguments()
+       * Optional<String> command()
+       * Optional<String> commandLine()
+       * Optional<Instant> startInstant()
+       * Optional<Duration> totalCpuDuration()
+       * Optional<String> user()
+        
+    jshell> currentProcess.info()
+    $5 ==> [user: Optional[username], cmd: /usr/lib/jvm/jdk-9/bin/java, args: [-agentlib:jdwp=transport=dt_socket,address=localhost:40499, jdk.jshell.execution.RemoteExecutionControl, 41667], startTime: Optional[2017-08-15T17:36:30.240Z], totalTime: Optional[PT0.88S]]
+ 
+   * Find JShell process with jps
+   
+    jshell> ProcessHandle currentProcess = ProcessHandle.current();
+    currentProcess ==> 10420
+    
+    jshell> currentProcess.pid()
+    $7 ==> 10420
+    
+    jshell> ProcessHandle.of(10420)
+    $9 ==> Optional[10420]
+
+    jshell> $9.get()
+    $10 ==> 10420
+
+    jshell> $10.info()
+    $11 ==> [user: Optional[username], cmd: /usr/lib/jvm/jdk-9/bin/java, args: [-agentlib:jdwp=transport=dt_socket,address=localhost:40499, jdk.jshell.execution.RemoteExecutionControl, 41667], startTime: Optional[2017-08-15T17:36:30.240Z], totalTime: Optional[PT1.09S]]
 
 
+StackWalker:
+    
+    jshell> StackWalker.getInstance().walk(s -> s.limit(5).collect(Collectors.toList()));
+    [do_it$(java:15), jdk.jshell/jdk.jshell.execution.DirectExecutionControl.invoke(DirectExecutionControl.java:209), jdk.jshell/jdk.jshell.execution.RemoteExecutionControl.invoke(RemoteExecutionControl.java:116), jdk.jshell/jdk.jshell.execution.DirectExecutionControl.invoke(DirectExecutionControl.java:119), jdk.jshell/jdk.jshell.execution.ExecutionControlForwarder.processCommand(ExecutionControlForwarder.java:134)]
+
+  Stop doing new Exception when you need to inspect the stack while in the REPL. 
+     
+JDK structure changes
+    
+   * Semantic versioning: 
+   
+    jshell> Runtime.version()
+    $13 ==> 9-ea+170-jigsaw-nightly-h6410-20170518
+    
+    jshell> $13.major()
+    $14 ==> 9
+    
+    jshell> $13.minor()
+    $15 ==> 0
+    
+Language improvements continue (Project Coin):
+
+   _ is an invalid identifier (for lambdas)
+   
+     jshell> int _ = 1
+     |  Error:
+     |  as of release 9, '_' is a keyword, and may not be used as an identifier
+     |  int _ = 1
+     |      ^
+     |  Error:
+     |  reached end of file while parsing
+     |  int _ = 1
+     |           ^
+
+     jshell> int __ = 1
+     __ ==> 1
+    
+   private methods in interfaces:
+       
+     jshell> interface A { private int zero() { return 0;} default int one() { return zero() + 1;}}
+     |  created interface A
+   
+   effectively final in try with resources:
+       
+     jshell> boolean a() throws Exception { Socket s = new Socket(); return s.isClosed(); }
+     |  created method a()
+
+     jshell> boolean a() throws Exception { Socket s = new Socket(); try (s) { } return s.isClosed(); }
+     |  modified method a()
+
+UTF-8 property files:
+    Create a text file call `properties.properties` containing, save the file and load `jshell`:
+
+        # This is the default properties.properties file
+        s1 = computer
+        s2 = disk
+        s3 = monitor
+        s4 = keyboard
+
+     jshell> new PropertyResourceBundle(new FileInputStream("properties.properties")).handleGetObject("s2")
+     $1 ==> "computer"    
+    
 Finally, exit the REPL via one of the two ways:
 
     jshell> /exit
@@ -116,140 +356,17 @@ Or
      
     jshell> [Ctrl][D]     
     (quietly exits)
-    
-Some more Java 9 improvements to try in JShell (thanks to @sjmaple for the contribution)
-
-    import java.time.*;
-    void printf(Object a) { System.out.println(a); }
-
-Collections of factory methods: 
-
-1-10 arguments + varargs: 
-
-    List.of(1, 2, 3, 4, 5)
-    Map.of("hello", "world", "status", "mad")
-    Set.of(1,2,4)
-    Set.of(1,2,4)      <=== look for the change in order of the elements
-    
-implementation classes 2 elements vs N elements:
-    
-    List.of(1).getClass()
-    List.of(1, 2).getClass()
-
-streams: 
-   * dropwhile/takewhile:
-   
-    IntStream.range(1, 10).dropWhile(x -> x < 5).forEach(System.out::println)
-
-   * iterate 
-
-    IntStream.iterate(0, x -> x + 1, x -> x < 10).forEach(System.out::println)
-  
-   * Stream from Optional: 
-    
-    Optional.of(1).stream().map(x -> x*3); 
-    Optional.empty().or(() -> Optional.of(“Hello”))
-    Optional.empty().ifPresent(null) 
-    Optional.empty().ifPresentOrElse(null, () -> printf(“hello“));
-     
-   * Date and time improvements:
-     
-    import java.time.*;
-    LocalDate.now()
-    $2.datesUntil(LocalDate.of(2017, 4, 1)).forEach(System.out::println)
-    
-Concurrency
-   * Completable future:
-     
-    new CompletableFuture<String>() future = new CompletableFuture<>()
-    future.copy()
-    $47.complete("Hello world“)
-    $47.get() <—true
-    future.isDone() <— false
-    future.completeOnTimeout("Isn't this amazing", 1, TimeUnit.SECONDS)
-        
-    delays / timeouts: 
-       *  orTimeout(1, TimeUnit.SECONDS)
-       *  completeOnTimeout(T value, long timeout, TimeUnit unit)
-     
-HttpClient
-
-    import jdk.incubator.http.*;
-    String body = HttpClient.newHttpClient().send(HttpRequest.newBuilder(URI.create("https://www.google.com")).GET().build(),HttpResponse.BodyHandler.asString()).body();
-    
-Try without http? What is the expected result? 
-    
-    java.lang.NullPointerException 
-
-Process API: 
-    
-    ProcessHandle currentProcess = ProcessHandle.current();
-    System.out.println("Current Process Id: = " + currentProcess.getPid());
-    ProcessHandle ph =  Process.toHandle()
-    Stream<ProcessHandle> children() / Stream<ProcessHandle> descendants()
-    CompletableFuture<Process> onExit() <- do something when the process is finished. No more tears and third party libs.
-    static Optional<ProcessHandle> of(long pid)
-    
-    ProcessHandle.Info info()
-        Optional<String[]> arguments()
-        Optional<String> command()
-        Optional<String> commandLine()
-        Optional<Instant> startInstant()
-        Optional<Duration> totalCpuDuration()
-        Optional<String> user()
-    
-   Find JShell process with jps
-   
-    ProcessHandle currentProcess = ProcessHandle.current();
-    currentProcess.getPid()
-    ProcessHandle.of(27468)
-    $22.get()
-    $23.info()
-
-StackWalker:
-    
-    StackWalker.getInstance().walk(s -> s.limit(5).collect(Collectors.toList()));
-    Stop doing new Exception when you need to inspect the stack. 
-     
-JDK structure changes
-    
-    no tools.jar 
-    could be a problem if you require classes from it 
-    
-   Semantic versioning: 
-   
-    Runtime.version()
-    $53.major()
-    $53.minor()
-    
-project Coin, language improvements continue:
-
-   _ is an invalid identifier (for lambdas)
-   
-       _ = 1
-       __ = 1
-    
-   private methods in interfaces:
-       
-       interface A { private int zero() { return 0;} default int one() { return zero() + 1;}}
-   
-   effectively final in try with resources:
-       
-       boolean a() throws Exception { Socket s = new Socket(); return s.isClosed(); }
-       boolean a() throws Exception { Socket s = new Socket(); try (s) { } return s.isClosed(); }
-
-utf-8 property files:
-
-    new PropertyResourceBundle(new FileInputStream("properties.properties"))
-                              .handleGetObject("name")    
-    
-   
+ 
 Read all about the Java REPL at 
 - Project Kulla: https://adoptopenjdk.gitbooks.io/adoptopenjdk-getting-started-kit/content/en/openjdk-projects/kulla/kulla.html
 
+Follow Hendrik's hands-on presentation on JShell to learn about intermediate and advanced features:
+https://youtu.be/y868lMk6NtY?t=13156
+
 Try some more JShell examples:
+- https://zeroturnaround.com/rebellabs/the-best-java-9-language-and-api-improvements/
 - http://jakubdziworski.github.io/java/2016/07/31/jshell-getting-started-examples.html
-- REPL_Tutorial.pdf   https://community.oracle.com/docs/DOC-1016569
+- REPL_Tutorial.pdf - https://community.oracle.com/docs/DOC-1016569
 - https://www.infoq.com/articles/Java9-New-HTTP-2-and-REPL (see towards the bottom of the blog post)
 
 Some online Java REPLs to play with:
